<resources>
    <string name="app_name">Week10</string>
    <string name="name">Name</string>
    <string name="nim">Nim</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="laki">Laki-laki</string>
    <string name="pr">Perempuan</string>
    <string name="save">Simpan</string>
    <string name="gender">Gender Anda</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Afif</string>
    <string name="dummy_nim">L0122006</string>
    <string name="dummy_email">Afif@gmail.com</string>
    <string name="dummynumber">087771318659</string>
    <string name="dummyage">20</string>
    <string name="dummyGender">Laki</string>
    <string name="dark_mode">Dark Mode </string>
    <string name="profile_photo">profile foto</string>
    <string name="choose_photo">Change Photo</string>
</resources>